# FFRecorder

./: CMakeLists.txt  FFAudioBufferEncoder.cpp  FFAudioMixing.cpp  main.cpp  transcode_aac.c
